# LocalRecord

./: .gitignore  README.md  annot.html  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fetch-ffmpeg.ps1  fetch-ffmpeg.sh  fetch-model.ps1  fetch-model.sh
src/: App.css  App.tsx  annot.css  annot.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/ffmpeg/: placeholder.txt
src-tauri/capabilities/: default.json
src-tauri/examples/: debug_e2e.rs  debug_loopback.rs  smoke_record.rs  smoke_sysaudio.rs
src-tauri/icons/: icon.icns
src-tauri/src/: annot.rs  devices.rs  ffmpeg.rs  lib.rs  main.rs  record.rs  sysaudio.rs
src-tauri/src/sysaudio/: win.rs
src-tauri/src/sysaudio/win/: wasapi.rs
src/components/: AnnotOverlay.tsx  AudioMeter.tsx  CardSection.tsx  Preview.tsx  Section.tsx  SettingsModal.tsx
src/lib/: annot.ts  args.ts  cambg.ts  camera.ts  i18n.ts  sections.ts  seg.worker.ts  segmenter.ts  segtypes.ts  setup.ts  sources.ts
src/lib/__tests__/: annot.test.ts  args.test.ts  cambg.test.ts  sections.test.ts  setup.test.ts  sources.test.ts
src/state/: ui.ts
